crates/taut-rpc-macros/tests/ui/non-async-fail.rs
use taut_rpc::rpc;

#[rpc]
fn ping() -> &'static str {
    "pong"
}

fn main() {}
